tests/NormalTests/paczka1/fuzzy1/66367553.err
Error in line 1: 14pvUVFO S912 67,09
Error in line 2: gWZP A516 37,9
Error in line 12: S912 A516 71,7
Error in line 11: 14pvUVFO S912 95,4
Error in line 24: 14pvUVFO S912 96,6
Error in line 31: lJcf A581 0,0
Error in line 37: 7YoOPZXvu A516 69,5
